// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useQuery should execute a query and return some data 1`] = `
<div>
  <table>
    <caption>
      Table results
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          age
        </th>
        <th
          scope="col"
        >
          name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Ringo
        </th>
        <td>
          17
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Paul
        </th>
        <td>
          18
        </td>
      </tr>
    </tbody>
  </table>
  <button>
    Add Lennon
  </button>
  <button>
    Add George
  </button>
</div>
`;

exports[`useQuery should react to a change in the queried table 1`] = `
<div>
  <table>
    <caption>
      Table results
    </caption>
    <thead>
      <tr>
        <th
          scope="col"
        >
          age
        </th>
        <th
          scope="col"
        >
          name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <th
          scope="row"
        >
          Ringo
        </th>
        <td>
          17
        </td>
      </tr>
      <tr>
        <th
          scope="row"
        >
          Paul
        </th>
        <td>
          18
        </td>
      </tr>
    </tbody>
  </table>
  <button>
    Add John
  </button>
  <button>
    Add George
  </button>
</div>
`;
